PR c++/78489 - Substitution in wrong order

PR c++/84489
	* pt.c (type_unification_real): Revert last two changes.

From-SVN: r258802