gcc/cp/pt.c
@@ -18602,17 +18602,11 @@ type_unification_real (tree tparms,
 	  location_t save_loc = input_location;
 	  if (DECL_P (parm))
 	    input_location = DECL_SOURCE_LOCATION (parm);
-
-	  if (saw_undeduced == 1)
-	    ++processing_template_decl;
 	  arg = tsubst_template_arg (arg, targs, complain, NULL_TREE);
-	  if (saw_undeduced == 1)
-	    --processing_template_decl;
-
-	  if (arg != error_mark_node && !uses_template_parms (arg))
+	  if (!uses_template_parms (arg))
 	    arg = convert_template_argument (parm, arg, targs, complain,
 					     i, NULL_TREE);
-	  else if (saw_undeduced == 1)
+	  else if (saw_undeduced < 2)
 	    arg = NULL_TREE;
 	  else
 	    arg = error_mark_node;
